DuPont DevSB/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>DPS - Kevlar</fullName>
        <description>DPS - Kevlar Automotive App</description>
        <isActive>true</isActive>
        <values>
            <fullName>Close</fullName>
        </values>
        <values>
            <fullName>Design Solution</fullName>
        </values>
        <values>
            <fullName>End - Lost</fullName>
        </values>
        <values>
            <fullName>End - Won</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Target</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPS Basic Sales Process</fullName>
        <description>DPS Basic Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Design Solution</fullName>
        </values>
        <values>
            <fullName>End - Lost</fullName>
        </values>
        <values>
            <fullName>End - Won</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Target</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>I2C Sales Process</fullName>
        <description>I2C Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Close</fullName>
        </values>
        <values>
            <fullName>Design Solution</fullName>
        </values>
        <values>
            <fullName>End - Lost</fullName>
        </values>
        <values>
            <fullName>End - Won</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Ship %26 Support</fullName>
        </values>
        <values>
            <fullName>Target</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>I2C Sales Process-Simple</fullName>
        <description>I2C Sales Process-Simple</description>
        <isActive>true</isActive>
        <values>
            <fullName>Close</fullName>
        </values>
        <values>
            <fullName>Design Solution</fullName>
        </values>
        <values>
            <fullName>End - Lost</fullName>
        </values>
        <values>
            <fullName>End - Won</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Target</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>S%26C Short Sales Process</fullName>
        <description>S&amp;C Short Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Design Solution</fullName>
        </values>
        <values>
            <fullName>End - Lost</fullName>
        </values>
        <values>
            <fullName>End - Won</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
        <values>
            <fullName>Target</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>TEXT(Account.Country__c)</formula>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Geo_SubRegion__c</fullName>
        <formula>Account.SubRegion__c</formula>
        <label>Account Geo SubRegion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Country__c</fullName>
        <description>Display of the Country of the Related Account Owner</description>
        <formula>Account.Owner.Country</formula>
        <label>Account Owner Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.OwnerId</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Commercial_Date__c</fullName>
        <inlineHelpText>When Salesperson Responsible has won opportunity, the actual first commercial order date (goods issue date ) is entered.</inlineHelpText>
        <label>Actual Commercial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_Comment__c</fullName>
        <description>Comment further describing the timing, scope or assumptions used while entering the Amount field of this opportunity</description>
        <inlineHelpText>Comment further describing the timing, scope or assumptions used while entering the Amount field of this opportunity</inlineHelpText>
        <label>Amount Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount_Type__c</fullName>
        <description>Type of Revenue stream entered in the Amount field (e.g. Time period, type of schedule )</description>
        <inlineHelpText>Type of Revenue stream entered in the Amount field (e.g. Time period, type of schedule )</inlineHelpText>
        <label>Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Annual - Auto - Monthly</fullName>
                </value>
                <value>
                    <fullName>Annual - Auto - Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual - Auto - Yearly</fullName>
                </value>
                <value>
                    <fullName>Annual - Manual - Monthly</fullName>
                </value>
                <value>
                    <fullName>Annual - Manual - Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual - Manual - Yearly</fullName>
                </value>
                <value>
                    <fullName>Multiple Years</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>One Time - Auto - Monthly</fullName>
                </value>
                <value>
                    <fullName>One Time - Auto - Quarterly</fullName>
                </value>
                <value>
                    <fullName>One Time - Auto - Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time - Manual - Monthly</fullName>
                </value>
                <value>
                    <fullName>One Time - Manual - Quarterly</fullName>
                </value>
                <value>
                    <fullName>One Time - Manual - Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time - Tender</fullName>
                </value>
                <value>
                    <fullName>Schedule-Months</fullName>
                </value>
                <value>
                    <fullName>Schedule-Quarters</fullName>
                </value>
                <value>
                    <fullName>Schedule-Years</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_2__c</fullName>
        <description>Main type(s) of Application encountered in this Opportunity</description>
        <inlineHelpText>Main type(s) of Application encountered in this Opportunity</inlineHelpText>
        <label>Application 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Al PER</fullName>
                </value>
                <value>
                    <fullName>Architectural Coatings</fullName>
                </value>
                <value>
                    <fullName>Artistri</fullName>
                </value>
                <value>
                    <fullName>Backsheet</fullName>
                </value>
                <value>
                    <fullName>Balustrade</fullName>
                </value>
                <value>
                    <fullName>Bath Countertop</fullName>
                </value>
                <value>
                    <fullName>Bath other</fullName>
                </value>
                <value>
                    <fullName>Bathroom Partition</fullName>
                </value>
                <value>
                    <fullName>Bath vanity</fullName>
                </value>
                <value>
                    <fullName>Black Dye</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>Cast Polyurethanes</fullName>
                </value>
                <value>
                    <fullName>Ceiling</fullName>
                </value>
                <value>
                    <fullName>Color Dye</fullName>
                </value>
                <value>
                    <fullName>Commercial Table Top</fullName>
                </value>
                <value>
                    <fullName>Concrete Formliners</fullName>
                </value>
                <value>
                    <fullName>Copper PCMP</fullName>
                </value>
                <value>
                    <fullName>Countertop</fullName>
                </value>
                <value>
                    <fullName>Cromaprint</fullName>
                </value>
                <value>
                    <fullName>Cu PER</fullName>
                </value>
                <value>
                    <fullName>Dielectric Fluids</fullName>
                </value>
                <value>
                    <fullName>Dispersed Dye</fullName>
                </value>
                <value>
                    <fullName>Drainage Filters</fullName>
                </value>
                <value>
                    <fullName>Encapsulant</fullName>
                </value>
                <value>
                    <fullName>Exterior Cladding</fullName>
                </value>
                <value>
                    <fullName>Façade</fullName>
                </value>
                <value>
                    <fullName>Filtration</fullName>
                </value>
                <value>
                    <fullName>Fins</fullName>
                </value>
                <value>
                    <fullName>Flooring</fullName>
                </value>
                <value>
                    <fullName>Footware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Comment__c</fullName>
        <description>Comments further describing this application</description>
        <inlineHelpText>Comments further describing this application</inlineHelpText>
        <label>Application Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Segment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Segmentation__c.Type__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Segmentation__c</referenceTo>
        <relationshipLabel>Opportunities (Application)</relationshipLabel>
        <relationshipName>Application_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CLT-Fluid</fullName>
                </value>
                <value>
                    <fullName>CLT-Surfaces</fullName>
                </value>
                <value>
                    <fullName>CLT-Tyvek</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Opportunity application</description>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advanced Packaging Lithography</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Fabric</fullName>
                </value>
                <value>
                    <fullName>Fiber</fullName>
                </value>
                <value>
                    <fullName>Fluid Applied</fullName>
                </value>
                <value>
                    <fullName>Hybrid WB</fullName>
                </value>
                <value>
                    <fullName>Interior Cladding</fullName>
                </value>
                <value>
                    <fullName>No Application</fullName>
                </value>
                <value>
                    <fullName>Partition Wall</fullName>
                </value>
                <value>
                    <fullName>Potential Application</fullName>
                </value>
                <value>
                    <fullName>Protective Surface</fullName>
                </value>
                <value>
                    <fullName>Shower Wall</fullName>
                </value>
                <value>
                    <fullName>Sinks and Lavs</fullName>
                </value>
                <value>
                    <fullName>Vanity</fullName>
                </value>
                <value>
                    <fullName>Wrap</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>The status of the Opportunity in the Approval Process</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BI_NA_Opportunity_Score__c</fullName>
        <inlineHelpText>1 – DuPont proprietary/performance specification 
2 – DuPont basis of design specification 
3 – DuPont listed, but also Competitor(s) 
4 – DuPont not listed OR Generic specification (no brand listed) 
5 – DuPont not listed AND Competitor preferred</inlineHelpText>
        <label>BI-NA Opportunity Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chance_of_Success__c</fullName>
        <description>Ranking of the anticpated success of  the opportunity</description>
        <label>Chance of Success</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Checklist__c</fullName>
        <label>Close Checklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>*Stages 5 &amp; 6</fullName>
                </value>
                <value>
                    <fullName>Added to Outlook</fullName>
                </value>
                <value>
                    <fullName>Agreed upon Final Product Specification</fullName>
                </value>
                <value>
                    <fullName>Agreement signed and implementation plan</fullName>
                </value>
                <value>
                    <fullName>AuthentiPACE Phase 0</fullName>
                </value>
                <value>
                    <fullName>AuthentiPACE Phase 1</fullName>
                </value>
                <value>
                    <fullName>AuthentiPACE Phase 2</fullName>
                </value>
                <value>
                    <fullName>AuthentiPACE Phase 3</fullName>
                </value>
                <value>
                    <fullName>AuthentiPACE Phase 4</fullName>
                </value>
                <value>
                    <fullName>AuthentiPACE Phase 5</fullName>
                </value>
                <value>
                    <fullName>AuthentiPACE Phase 6</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Commercial NA</fullName>
                </value>
                <value>
                    <fullName>Contract Developed</fullName>
                </value>
                <value>
                    <fullName>Contract Signed</fullName>
                </value>
                <value>
                    <fullName>Contract Submitted</fullName>
                </value>
                <value>
                    <fullName>Customer Order Placed</fullName>
                </value>
                <value>
                    <fullName>Customer Part Number Established</fullName>
                </value>
                <value>
                    <fullName>Customer set-up in ERP requested</fullName>
                </value>
                <value>
                    <fullName>Extra Effort Required</fullName>
                </value>
                <value>
                    <fullName>First Article Accepted</fullName>
                </value>
                <value>
                    <fullName>Follow-up plan defined</fullName>
                </value>
                <value>
                    <fullName>Forecast demand</fullName>
                </value>
                <value>
                    <fullName>Forecast entered in DIBM</fullName>
                </value>
                <value>
                    <fullName>Formal agreement of deal</fullName>
                </value>
                <value>
                    <fullName>Formal proposal submitted</fullName>
                </value>
                <value>
                    <fullName>Initial Puchase Order Received</fullName>
                </value>
                <value>
                    <fullName>Launch and Supply Plan Developed</fullName>
                </value>
                <value>
                    <fullName>MOC</fullName>
                </value>
                <value>
                    <fullName>New Sales Forecast Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Planned_End_Date__c</fullName>
        <description>To Capture the expected End Date for all Task associated to Close Stage.</description>
        <label>Close Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments about the status of this opportunity</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Horizon__c</fullName>
        <defaultValue>&quot;Horizon-1&quot;</defaultValue>
        <description>The anticipated horizon period (ex.  year 1, year 2, year 3, quarter 1, quarter 2, quarter 3, wave 1, wave 2, wave 3) of which an opportunity is expected to reach commercial state. This field is governed by a workflow.  Therefore, the field text values may be different based on the defined workflow criteria.   One example, P&amp;IP ECP, uses a three year horizon cycle.  Thus, horizon 1 = created date + 4 qtrs to close date, horizon - 2 - created date + 5-8 qtrs to close date, horizon -3 = created date +  &gt;8qtrs to close date.</description>
        <inlineHelpText>The &quot;Horizon&quot; period the opportunity is expected to close.  The horizon period is based on the Created date and the entered CLOSE date.  For example, an opportunity closing within the next 9 quarters will be in Horizon -2.</inlineHelpText>
        <label>Commercial Horizon</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Revenue_Date__c</fullName>
        <label>Commercial Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commitment_Probability__c</fullName>
        <description>Probability that customer will successfully complete the project</description>
        <label>Commitment Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <label>Competition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3M</fullName>
                </value>
                <value>
                    <fullName>3M Insulation</fullName>
                </value>
                <value>
                    <fullName>Adapta</fullName>
                </value>
                <value>
                    <fullName>Airgas</fullName>
                </value>
                <value>
                    <fullName>Akzo</fullName>
                </value>
                <value>
                    <fullName>Akzo Nobel</fullName>
                </value>
                <value>
                    <fullName>Alpha Protech</fullName>
                </value>
                <value>
                    <fullName>Amercoat</fullName>
                </value>
                <value>
                    <fullName>Americoat</fullName>
                </value>
                <value>
                    <fullName>Ameron</fullName>
                </value>
                <value>
                    <fullName>Aramark</fullName>
                </value>
                <value>
                    <fullName>Arisawa</fullName>
                </value>
                <value>
                    <fullName>Arkema</fullName>
                </value>
                <value>
                    <fullName>Asahi</fullName>
                </value>
                <value>
                    <fullName>Awlgrip</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BASF</fullName>
                </value>
                <value>
                    <fullName>Becker</fullName>
                </value>
                <value>
                    <fullName>Cabot</fullName>
                </value>
                <value>
                    <fullName>Cadillac Uniform</fullName>
                </value>
                <value>
                    <fullName>Cardinal</fullName>
                </value>
                <value>
                    <fullName>CCP</fullName>
                </value>
                <value>
                    <fullName>Cellulose Insulation</fullName>
                </value>
                <value>
                    <fullName>Cheil</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chin Funex Charming</fullName>
                </value>
                <value>
                    <fullName>Cintas</fullName>
                </value>
                <value>
                    <fullName>Coronado</fullName>
                </value>
                <value>
                    <fullName>DA Nano</fullName>
                </value>
                <value>
                    <fullName>DeVoe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Information__c</fullName>
        <label>Competitive Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Competitor for this Opportunity</inlineHelpText>
        <label>Competitor</label>
        <referenceTo>Competition__c</referenceTo>
        <relationshipLabel>Competition</relationshipLabel>
        <relationshipName>CompetitionOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__CP_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CP Project</label>
        <referenceTo>ConstructionPts__CP_Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Duration__c</fullName>
        <description>Length of opportunity or contract in months, quarters, or years (see Amount Type).</description>
        <inlineHelpText>Length of opportunity or contract in months, quarters, or years (see Amount Type).</inlineHelpText>
        <label>Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <description>Date the contract related to this opportunity expires</description>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Required__c</fullName>
        <description>Will a contract be completed for this Opportunity</description>
        <inlineHelpText>Will a contract be completed for this Opportunity</inlineHelpText>
        <label>Contract Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Signed_Date__c</fullName>
        <description>Date the contract was signed</description>
        <label>Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Critical_Success_Factors__c</fullName>
        <label>Critical Success Factors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Business_Impact__c</fullName>
        <label>Customer Business Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Commitment__c</fullName>
        <label>Customer Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sole specification</fullName>
                </value>
                <value>
                    <fullName>Verbal agreement</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Development_Phase__c</fullName>
        <description>Experimental</description>
        <label>Customer Development Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concept</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Prototype</fullName>
                </value>
                <value>
                    <fullName>Production Trial</fullName>
                </value>
                <value>
                    <fullName>Scale Up</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Phasing Out</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Specification - 3rd Party</fullName>
                </value>
                <value>
                    <fullName>Specification - Distributor</fullName>
                </value>
                <value>
                    <fullName>Specification - Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Needs__c</fullName>
        <description>Use this field to describe the Customer&apos;s needs or objectives for this Opportunity</description>
        <inlineHelpText>What is the customer’s objective for this opportunity?</inlineHelpText>
        <label>Customer Needs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DECT_SubSegment__c</fullName>
        <description>Market Subsegment for Electronics Communications</description>
        <label>DECT SubSegment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Artistri</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Since_Client_Progression__c</fullName>
        <description>(11/6/2017) - Removed Last_Client_Progression__c reference as part of remediation effort.</description>
        <formula>TODAY() -  NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Client Progression</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Internal_Progression__c</fullName>
        <description>(11/6/2017) - Removed Last_Internal_Progression__c reference as part of remediation effort.</description>
        <formula>TODAY() - NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Internal Progression</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>